2000-05-09  Per Bothner  <per@bothner.com>

	* kawa/lang/AnyPat.java:  Implement java.io.Externalizable.
	* kawa/lang/EqualPat.java:  Likewise.
	* kawa/lang/ListRepeatPat.java:  Likewise.
	* kawa/lang/PairPat.java:  Likewise.
	* kawa/lang/Macro.java:  Likewise.
	* kawa/lang/SyntaxRule.java:  Likewise.
	* kawa/lang/SyntaxRules.java:  Likewise.

	* kawa/lang/Macro.java (scanForDefinitions):  Use new Parser methods
	to set line position.

	* kawa/lang/Translator.java (current_filename, current_line,
	current_column. messages):  Moved fields to superclass (Parser).
	(getMessages, setMessages, error):  Likewise moved methods.
	(setLine):  New methods.
	(scan_form):  Use new setLine method.
	* kawa/lang/SyntaxRules.java (<init>):  Likewise.

	* kawa/repl.java (setInterpreter):  Method removed.
	(getInterpreter):  Don't hard-wire in Scheme.
	(main):  Don't hard-wire in languages, instead ask Interpreter.

	* kawa/standard/Scheme.java (getNamedType):  Don't hard-wire
	"elisp:boolean".  Instead, handle "elisp:*".  Also, get an Elisp
	instance using reflection - in case it isn't available when compiling.

2000-04-22  Per Bothner  <per@bothner.com>

	* kawa/lang/SpecialType.java (interpreter):  New optional field.
	Call interpreter to handle conversion to/from boolean.
	* kawa/standard/eq_p.java (interpreter):  New field.  Used to
	do language-appropriate boolean result.
	* kawa/standard/equal_p.java:  Likewise.
	* kawa/standard/eqv_p.java:  Likewise.
	* kawa/standard/instance.java:  Likewise.
	* kawa/standard/not.java (getReturnType):  Get from interpreter.
	* kawa/standard/Scheme.java
	(booleanType):  Don't initialize in static constructor.
	(intType, floatType, etc):  Use new SpecialType constructor.
	(initSchee):  Pass this to eq_p, eqv_p, equal_p, instance constructors.
	(getNamedType):  Init boolean here, passing in Scheme.getInstance.
	Also, handle <elisp:boolean>.

2000-04-21  Per Bothner  <per@bothner.com>
